cm-super (0.3.3-2.1) UNRELEASED; urgency=low

  * change texlive dependencies after name change of packages
  * adapted maintainer scripts to be more silent
  * depend on pfb2t1c2pfb, remove the perl version
  * add code for config file move

 -- Norbert Preining <preining@logic.at>  Tue, 29 Nov 2005 19:59:04 +0100

cm-super (0.3.3-2) unstable; urgency=low

  * list all map files in updmap config file as MixedMap (Closes: #332670)
  * depend only on tex-common, making it impossible to install together
    with teTeX2. Add a README.teTeX2 for backporters. (Closes: #332673)
    This also closes the bug that cm-super-t1.map is left over in
    the updmap.cfg file (Closes: #334177)
  * make font generation less noisy, only mention that it may take
    some time. (Closes: #333745)
  * include the postrm/postinst scripts from lmodern, which are prototypes
    of the Font Package part of the TeX Policy.
  * Install the afm files also to /usr/share/texmf and only make links
    in /usr/X11R6
  * Install defoma hints file
  * The package name is cm-super now, so closes: #325093.
  * depend on tetex-(base|extra) | texlive-latexrecommended to get the
    mf sources and tfm files of the fonts.

 -- Norbert Preining <preining@logic.at>  Mon, 17 Oct 2005 01:31:00 +0200

cm-super (0.3.3-1) unstable; urgency=low

  * Suggest pfb2t1c2pfb for binary conversion program. In the postinst
    script test first on the t1c2pfb binary and if not present use the
    perl script.
  * changed README.debian, add entry on variants of sharp-s, TODO, copyright
  * fixed old FSF address in copyright file
  * add cm-super-x11 package to make the fonts available from X11
  * removed magic perl header from t1c2pfb.pl
  * created a minimal man page for t1c2pfb (perl script installed in /usr/bin)
  * added lintian overrides
    cm-super: for the md5sum check
    cm-super source: old debian/postinst script is buggy, it is replaced
    cm-super-x11: install into X11R6