@@ -3,9 +3,12 @@ cm-super (0.3.3-2.1) UNRELEASED; urgency=low
   * change texlive dependencies after name change of packages
   * adapted maintainer scripts to be more silent
   * depend on pfb2t1c2pfb, remove the perl version
-  * add code for config file move
+  * add code for config file move, move the map files to /etc/texmf/fonts/map
+    in a first step. Later (with tetex moving map files out of /etc/texmf)
+    we will move the map files also to TEXMFMAIN.
+  * depend on tex-common >= 0.11 to get /etc/texmf as TEXMFSYSCONFIG
 
- -- Norbert Preining <preining@logic.at>  Tue, 29 Nov 2005 19:59:04 +0100
+ -- Norbert Preining <preining@logic.at>  Wed, 30 Nov 2005 00:04:58 +0100
 
 cm-super (0.3.3-2) unstable; urgency=low
 
